feat: ability to open portable grid with a keybinding